# flawless

./: .gitignore  Makefile  cookbook.ipynb  main.py  pyproject.toml  requirements.txt
runs/detect/train/: args.yaml
runs/detect/train2/: args.yaml
runs/detect/train3/: args.yaml
runs/detect/train4/: args.yaml
runs/detect/train5/: args.yaml  results.csv
runs/detect/train6/: args.yaml
runs/detect/train7/: args.yaml
yolo_training/: Makefile  cookbook.ipynb  dataset.yaml  eda.py  evaluate.py  gen_description.py  gen_labels.py  prep-yolo-data.sh  traffic_sign_dict.json
yolo_training/utils/: gen_labels.py
